# brf-neurons

./: .gitignore  pyproject.toml
experiments/SHD/: generate_data_shd.py  shd_alif_train.py  shd_model_stats.py  shd_train.py
experiments/ecg/: ecg_alif_train.py  ecg_model_stats.py  ecg_train.py
experiments/smnist/: smnist_model_stats.py  smnist_train.py  smnist_train_alif_tbptt.py
src/brf_snn/functional/: __init__.py  autograd.py
src/brf_snn/models/: __init__.py  harmonicrsnns.py  resonaternns.py  simplernns.py
src/brf_snn/modules/: __init__.py  alif.py  hrf.py  lif.py  linear_layer.py  rf.py
